--- a/applyonline/static/aofront/index.html
+++ b/applyonline/static/aofront/index.html
@@ -86,5 +86,5 @@
 
     ga('create', 'UA-53234284-5', 'auto');
   </script>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime-a99af469ac456445bf41.js"></script><script type="text/javascript" src="polyfills-a99af469ac456445bf41.js"></script><script type="text/javascript" src="vendor-a99af469ac456445bf41.js"></script><script type="text/javascript" src="main-a99af469ac456445bf41.js"></script></body>
 </html>
