--- a/applyonline/static/aofront/index.html
+++ b/applyonline/static/aofront/index.html
@@ -67,7 +67,7 @@
       }
     }
   </style>
-<link rel="stylesheet" href="styles.css"></head>
+</head>
 <body>
   <aofront-root>
     <div class="app-loading">
@@ -86,5 +86,5 @@
 
     ga('create', 'UA-53234284-5', 'auto');
   </script>
-<script type="text/javascript" src="runtime-a99af469ac456445bf41.js"></script><script type="text/javascript" src="polyfills-a99af469ac456445bf41.js"></script><script type="text/javascript" src="vendor-a99af469ac456445bf41.js"></script><script type="text/javascript" src="main-a99af469ac456445bf41.js"></script></body>
+<script type="text/javascript" src="runtime-ba2cf8379de344c2254a.js"></script><script type="text/javascript" src="polyfills-ba2cf8379de344c2254a.js"></script><script type="text/javascript" src="styles-ba2cf8379de344c2254a.js"></script><script type="text/javascript" src="vendor-ba2cf8379de344c2254a.js"></script><script type="text/javascript" src="main-ba2cf8379de344c2254a.js"></script></body>
 </html>
